Refactor build script and update .gitignore
- Refactored the build.sh script to include logic for building dbNSFP databases.
- Added new entries to .gitignore file to ignore specific files and directories.
- Renamed and moved scripts related to building and cleaning dbNSFP databases.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ scripts/app/container/drugbank.xml
 scripts/app/container/databases/Disease.txt
 
 scripts/app/container/oncoreport/.Rhistory
+
+.DS_Store
+databases/hg19/dbNSFP
+databases/hg38/dbNSFP
