Removing untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ scripts/app/container/oncoreport/.Rhistory
 .DS_Store
 databases/hg19/dbNSFP
 databases/hg38/dbNSFP
+databases/pharm_database_hg19.txt
+databases/pharm_database_hg38.txt
