Refactor of Dockerfile and build scripts
The container build scripts have been upgraded to support a multi-stage build process. In the first stage, all databases are downloaded and pre-processed to get their latest version. In the second stage, the container used for the app is built with the data gathered from the first step.
In this phase, a versions.txt file is created to keep track of all the release and download date of all databases stored within the container.

--- a/scripts/app/container/Dockerfile
+++ b/scripts/app/container/Dockerfile
@@ -1,4 +1,10 @@
-FROM ubuntu:focal
+FROM ubuntu:focal as prepare
+COPY . /support
+ARG ONCOREPORT_ORIGIN https://github.com/knowmics-lab/oncoreport.git 
+ARG ONCOREPORT_BRANCH master
+RUN --mount=type=secret,id=drugbank --mount=type=secret,id=gltranslate /support/scripts/prepare.sh
+
+FROM ubuntu:focal as oncoreport
 ENV DOCKER_USER_ID 501
 ENV DOCKER_USER_GID 20
 ENV BOOT2DOCKER_ID 1000
@@ -9,8 +15,8 @@ ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64/
 
 ENV DEBIAN_FRONTEND noninteractive
 
-# Add all support files
-COPY . /support
+# Copy support files from previous build stage
+COPY --from=prepare /support /support
 
 RUN usermod -u ${BOOT2DOCKER_ID} www-data && \
     usermod -G staff www-data && \
