Update Dockerfile to use bash for running the prepare script
The Dockerfile has been modified to update the command used for running the prepare script. Instead of directly executing the script, it now uses bash to execute it. This change ensures that the script is executed correctly within the container.

--- a/scripts/app/container/Dockerfile
+++ b/scripts/app/container/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:focal as prepare
 COPY . /support
 ARG ONCOREPORT_ORIGIN https://github.com/knowmics-lab/oncoreport.git 
 ARG ONCOREPORT_BRANCH master
-RUN --mount=type=secret,id=drugbank --mount=type=secret,id=gltranslate /support/scripts/prepare.sh
+RUN --mount=type=secret,id=drugbank --mount=type=secret,id=gltranslate bash /support/scripts/prepare.sh
 
 FROM ubuntu:focal as oncoreport
 ENV DOCKER_USER_ID 501
