Added dependencies in Dockerfile and process_civic script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "kable",
         "knitr",
         "optparse",
+        "pysam",
         "readr",
         "readxl",
         "rmarkdown",
