Replacing tsv files with rds files to speed-up loading and processing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Bioc",
         "dbparser",
         "dplyr",
+        "drugbank",
         "filesstrings",
         "fuzzyjoin",
         "kable",
