Bugfixes and better separation between hg19 and hg38 data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,19 @@
 {
     "cSpell.words": [
+        "aifa",
         "Bioc",
+        "dbnsfp",
         "dbparser",
         "dplyr",
         "drugbank",
+        "drugfood",
+        "FATHMM",
         "filesstrings",
         "fuzzyjoin",
         "kable",
         "knitr",
         "optparse",
+        "PROVEAN",
         "pysam",
         "readr",
         "readxl",
