Added support for building diseases list from Disease Ontology

--- a/scripts/app/container/Dockerfile
+++ b/scripts/app/container/Dockerfile
@@ -15,15 +15,11 @@ RUN ln -snf /usr/share/zoneinfo/${CONTAINER_TIMEZONE} /etc/localtime && \
                    libpcre32-3 libpcrecpp0v5 r-base r-cran-data.table r-cran-tidyr \
                    r-cran-dplyr r-cran-readr r-cran-rvest r-cran-readxl r-cran-fuzzyjoin \
                    r-cran-webchem r-cran-dbparser r-cran-googlelanguager r-cran-r.utils \
-                   python3-pip python3-setuptools python3 && \
+                   r-cran-ontologyindex python3-pip python3-setuptools python3 && \
     apt remove -y software-properties-common && \
     apt autoclean && \
     apt clean && \
     rm -rf /var/lib/apt/lists/*
-
-    #r-base-dev libssl-dev libxml2-dev libcurl4-openssl-dev libyaml-dev libfontconfig1-dev unixodbc-dev
-    #apt remove -y r-base-dev libssl-dev libxml2-dev libcurl4-openssl-dev libyaml-dev libfontconfig1-dev unixodbc-dev && \
-    #Rscript "/installPackages.R" "stage1" && \
 
 FROM stage1_base as stage2_base
 ARG TRIM_GALORE_VERSION="0.6.10"
@@ -53,11 +49,13 @@ RUN usermod -u ${BOOT2DOCKER_ID} www-data && \
     apt update && \
     apt dist-upgrade -y && \
     apt install -y init bwa samtools bedtools tabix bcftools openjdk-17-jdk \
-                   ant r-base-dev rename beanstalkd apache2 php-xdebug \
+                   ant r-base rename beanstalkd apache2 php-xdebug \
                    composer php-cli libapache2-mod-php mysql-server php-mysql \
                    php-apcu php-gd php-xml php-mbstring php-zip php-curl php-intl \
-                   ca-certificates-java libssl-dev libxml2-dev libcurl4-openssl-dev \
-                   libyaml-dev libfontconfig1-dev unixodbc-dev && \
+                   ca-certificates-java r-cran-shiny r-cran-rmarkdown \
+                   r-cran-kableextra r-cran-rcurl r-cran-stringr r-cran-xml2 \
+                   r-cran-knitr r-cran-devtools r-cran-optparse r-bioc-iranges \
+                   r-cran-brew r-cran-vcfr r-cran-dt && \
     echo "ServerName localhost" >> /etc/apache2/apache2.conf && \
     update-java-alternatives -s "java-1.17.0-openjdk-${ARCHITECTURE}" && \
     update-ca-certificates -f && \
@@ -70,6 +68,7 @@ RUN usermod -u ${BOOT2DOCKER_ID} www-data && \
     apt install -y libtool libgsl-dev libhts-dev && cd /oncoreport/tmp/ && \
     git clone https://github.com/CSB5/lofreq.git && cd lofreq && ./bootstrap && ./configure && make && make install && \
     pip3 install cutadapt && \
+    pip3 install pysam && \
     curl -fsSL "https://github.com/FelixKrueger/TrimGalore/archive/$TRIM_GALORE_VERSION.tar.gz" -o trim_galore.tar.gz && \
     tar -zxvf trim_galore.tar.gz && \
     cp "TrimGalore-$TRIM_GALORE_VERSION/trim_galore" /usr/local/bin/ && \
@@ -88,8 +87,7 @@ RUN usermod -u ${BOOT2DOCKER_ID} www-data && \
     a2enmod rewrite && \
     export JAVA_HOME && \
     rm -rf /var/log/mysql && rm -rf /var/lib/mysql && \
-    Rscript /installPackages.R "stage2" && rm /installPackages.R && \
-    apt remove -y r-base-dev libssl-dev libxml2-dev libcurl4-openssl-dev libyaml-dev libfontconfig1-dev unixodbc-dev && \
+    rm /installPackages.R && \
     apt remove -y software-properties-common && \
     apt autoclean && \
     apt clean && \
@@ -103,36 +101,39 @@ COPY . ${BASE_PATH}
 RUN --mount=type=secret,id=drugbank --mount=type=secret,id=gltranslate bash ${BASE_PATH}/scripts/prepare.sh
 
 FROM stage2_base as oncoreport_final
+ARG BASE_PATH="/support"
+ENV ONCO_BASE "/oncoreport"
+COPY . ${BASE_PATH}
 
-# Copy support files from previous build stage
-COPY --from=stage1_support /support /support
-
-RUN mv /support/scripts/bootstrap.sh /usr/local/bin/ && \
-    mv /support/scripts/installPackages.R /usr/local/bin/ && \
-    mv /support/scripts/setup.sh /usr/local/bin/ && \
-    mv /support/scripts/create_mysql_users.sh /usr/local/bin/ && \
-    mv /support/conf/apache_default.conf /etc/apache2/sites-available/000-default.conf && \
-    mv /support/scripts/start-apache2.sh /usr/local/bin/start-apache2.sh && \
-    mv /support/scripts/start-mysqld.sh /usr/local/bin/start-mysqld.sh && \
-    mv /support/conf/supervisord-apache2.conf /etc/supervisor/conf.d/supervisord-apache2.conf && \
-    mv /support/conf/supervisord-mysqld.conf /etc/supervisor/conf.d/supervisord-mysqld.conf && \
-    mv /support/conf/supervisord-beanstalkd.conf /etc/supervisor/conf.d/supervisord-beanstalkd.conf && \
-    mv /support/conf/supervisord-worker.conf /etc/supervisor/conf.d/supervisord-worker.conf && \
-    mv /support/conf/supervisord-cloud.conf /etc/supervisor/supervisord-cloud.conf.disabled && \
-    mv /support/conf/supervisord.conf /etc/supervisor/supervisord.conf && \
-    mv /support/conf/mysqld_innodb.cnf /etc/mysql/conf.d/mysqld_innodb.cnf && \
-    mv /support/databases /databases && \
-    mv /support/oncoreport /scripts && \
-    mv /support/html_source /html_source && \
-    mv /support/ws.tgz /ws.tgz && \
+RUN mkdir -p "${ONCO_BASE}" && \
+    mv "${BASE_PATH}/scripts/bootstrap.sh" /usr/local/bin/ && \
+    mv "${BASE_PATH}/scripts/setup.sh" /usr/local/bin/ && \
+    mv "${BASE_PATH}/scripts/create_mysql_users.sh" /usr/local/bin/ && \
+    mv "${BASE_PATH}/conf/apache_default.conf" /etc/apache2/sites-available/000-default.conf && \
+    mv "${BASE_PATH}/scripts/start-apache2.sh" /usr/local/bin/start-apache2.sh && \
+    mv "${BASE_PATH}/scripts/start-mysqld.sh" /usr/local/bin/start-mysqld.sh && \
+    mv "${BASE_PATH}/conf/supervisord-apache2.conf" /etc/supervisor/conf.d/supervisord-apache2.conf && \
+    mv "${BASE_PATH}/conf/supervisord-mysqld.conf" /etc/supervisor/conf.d/supervisord-mysqld.conf && \
+    mv "${BASE_PATH}/conf/supervisord-beanstalkd.conf" /etc/supervisor/conf.d/supervisord-beanstalkd.conf && \
+    mv "${BASE_PATH}/conf/supervisord-worker.conf" /etc/supervisor/conf.d/supervisord-worker.conf && \
+    mv "${BASE_PATH}/conf/supervisord-cloud.conf" /etc/supervisor/supervisord-cloud.conf.disabled && \
+    mv "${BASE_PATH}/conf/supervisord.conf" /etc/supervisor/supervisord.conf && \
+    mv "${BASE_PATH}/conf/mysqld_innodb.cnf" /etc/mysql/conf.d/mysqld_innodb.cnf && \
+    mv "${BASE_PATH}/databases" "${ONCO_BASE}/databases" && \
+    mv "${BASE_PATH}/oncoreport" "${ONCO_BASE}/scripts" && \
+    mv "${BASE_PATH}/html_source" "${ONCO_BASE}/html_source" && \
+    mv "${BASE_PATH}/ws.tgz" /ws.tgz && \
     chmod 755 /usr/local/bin/*.sh && \
-    rm -rf /support && \
-    ln -s /usr/local/bin/bootstrap.sh /bootstrap.sh
-
-# Complete the setup
-RUN --mount=type=secret,id=drugbank /usr/local/bin/setup.sh
+    rm -rf "${BASE_PATH}" && \
+    ln -s /usr/local/bin/bootstrap.sh /bootstrap.sh && \
+    bash /usr/local/bin/setup.sh && \
+    rm -rf /usr/local/bin/setup.sh
 
 EXPOSE 80
-VOLUME  [ "/oncoreport/ws" ]
+VOLUME [ "${ONCO_BASE}/ws" ]
 
 CMD ["/bootstrap.sh"]
+
+#libssl-dev libxml2-dev libcurl4-openssl-dev libyaml-dev libfontconfig1-dev unixodbc-dev
+#Rscript /installPackages.R "stage2" && 
+#apt remove -y r-base-dev libssl-dev libxml2-dev libcurl4-openssl-dev libyaml-dev libfontconfig1-dev unixodbc-dev && \
